--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
 </head>
 <body>
-I'm hosted with GitHub Pages.&lt;/p&gt;
+I'm hosted with GitHub Pages.
 </body>
 </html>
